GNOME Bugzilla – Bug 785159
[PATCH] icon-utils: Use macro instead of hardcoded int
Last modified: 2017-07-20 04:47:40 UTC
600 -> GTK_STYLE_PROVIDER_PRIORITY_APPLICATION
Created attachment 356003 [details] [review] icon-utils: Use GTK macro instead of hardcoded int
Attachment 356003 [details] pushed as 974d793 - icon-utils: Use GTK macro instead of hardcoded int