icon-utils: Use GTK macro instead of hardcoded int

https://bugzilla.gnome.org/show_bug.cgi?id=785159